fix(VsModalView): apply z-index value (#325)

--- a/packages/vlossom/src/components/vs-modal/VsModalView.scss
+++ b/packages/vlossom/src/components/vs-modal/VsModalView.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
+    z-index: var(--vs-modal-z-index);
 
     &.vs-modal-fixed {
         position: fixed;
